<resources>
    <string name="app_name">Tapestry</string>
    <string-array name="location_options">
        <item>Home</item>
        <item>Lock Screen</item>
        <item>Both</item>
    </string-array>
    <item name="fab_delete" type="id" />
    <item name="fab_download" type="id" />
    <item name="fab_random" type="id" />

    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_licenses">Open Source Licenses</string>
    <string name="title_version_number">1.0.0</string>
    <string name="title_clear_cache">Clear app cache</string>
    <string name="title_support_dev">Support developer</string>

    <string name="unable_to_load_images">Unable to load images</string>
    <string name="clear">Clear</string>
    <string name="download_all">Download All</string>
    <string name="choose_random">Choose Random</string>
    <string name="subreddit_string">Subreddit:</string>
    <string name="author_string">Author:</string>
    <string name="size_string">Size:</string>
    <string name="date_string">Date:</string>
    <string name="comments_string">Comments:</string>
    <string name="upvotes_string">Upvotes:</string>
    <string name="post_string">POST</string>
    <string name="save_string">SAVE</string>
    <string name="set_string">SET</string>
    <string name="favorites_info_msg"><b>Nothing to see here...</b> \n Start liking photos!</string>
    <string name="history_info_msg"><b>Nothing to see here...</b> \n Add a wallpaper!</string>
    <string name="search_error_info_msg">Uh oh…something went wrong</string>
    <string name="no_network">network not detected</string>
    <string name="set_default_subreddit">Set Default Subreddit:</string>
    <string name="default_sub">Default sub</string>
    <string name="set_preferred_resolution">Set Preferred Resolution:</string>
    <string name="load_lower_resolution_previews">Load lower resolution previews</string>
    <string name="enable_random_favorite_wallpapers">Enable random favorite wallpapers</string>
    <string name="set_random_switch_interval_hours">Set random switch interval (hours):</string>
    <string name="download_original_image">Download original image</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="toggle_layout">Toggle Grid Layout</string>
    <string name="save_settings">Save Settings</string>

</resources>